navbar overflow bug fixed

--- a/CSS/contact/contact-styles.css
+++ b/CSS/contact/contact-styles.css
@@ -1,11 +1,13 @@
 .contact {
     margin: 3rem auto;
     height: 42rem;
+    border: 2px solid red;
 }
 
 .contact .child-container {
     justify-content: space-between;
     height: 100%;
+    border: 2px solid green;
 }
 
 .form-child {
@@ -17,6 +19,7 @@
     width: 100%;
     flex: 1;
     max-height: 530px;
+    border: 2px solid cyan;
 }
 
 .contact__info {
@@ -24,6 +27,7 @@
     width: 50%;
     position: relative;
     background-color: var(--primary-color);
+    border: 2px solid yellow;
 }
 
 .contact__info::after {
@@ -35,6 +39,10 @@
     height: 60px;
     background-color: var(--primary-color);
     transform: rotate(45deg);
+}
+
+.contact__info-personal {
+    border: 2px solid red;
 }
 
 .personal .personal__info {
@@ -58,12 +66,14 @@
 
 .contact-form__container {
     width: 50%;
+    border: 2px solid brown;
 }
 
 .form {
     height: 90%;
     width: 90%;
     justify-content: space-around;
+    border: 2px solid pink ;
 }
 
 .form__field {
